--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Personal Portfolio Website</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
+    </head>
+
+    <body>
+        <header class="header">
+            <a href="#" class="logo">Roman.</a>
+            <nav class="navbar">
+                <a href="#" class="active">Home</a>
+                <a href="#">About</a>
+                <a href="#">Services</a>
+                <a href="#">Portfolio</a>
+                <a href="#">Contact</a>
+            </nav>
+        </header>
+        <section class="home">
+            <!-- <div class="fade-in-image">
+                <img src="home.jpeg">
+            </div> -->
+            <div class="home-content">
+                <h1>Hi, I'm Roman Raguso</h1>
+                <h3>Software Engineer</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias exercitationem id magnam officia atque debitis quasi! Nam eius maiores repudiandae fugiat dolores possimus! Dolorem repellendus harum magnam veritatis est? A?</p>
+                <div class="btn-box">
+                    <a href="#">Hire Me</a>
+                    <a href="#">Let's Talk</a>
+                </div>
+            </div>
+            <div class="home-sci">
+                <a href="#"><i class="bx bxl-facebook"></i></a>
+                <a href="#"><i class="bx bxl-twitter"></i></a>
+                <a href="#"><i class="bx bxl-linkedin"></i></a>
+            </div>
+        </section>
+    </body>
+
+</html>
