--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
             </nav>
         </header>
         <section class="home">
-            <!-- <div class="fade-in-image">
-                <img src="home.jpeg">
-            </div> -->
             <div class="home-content">
                 <h1>Hi, I'm Roman Raguso</h1>
                 <h3>Software Engineer</h3>
@@ -34,6 +31,7 @@
                     <a href="#">Let's Talk</a>
                 </div>
             </div>
+            <img src="me.png" alt="My headshot">
             <div class="home-sci">
                 <a href="#"><i class="bx bxl-facebook"></i></a>
                 <a href="#"><i class="bx bxl-twitter"></i></a>
