--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Personal Portfolio Website</title>
+        <title>Roman Raguso</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
     </head>
@@ -25,7 +25,7 @@
             <div class="home-content">
                 <h1>Hi, I'm Roman Raguso</h1>
                 <h3>Software Engineer</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias exercitationem id magnam officia atque debitis quasi! Nam eius maiores repudiandae fugiat dolores possimus! Dolorem repellendus harum magnam veritatis est? A?</p>
+                <p>B.S. in Computer Science at Binghamton University, Class of 2024&NewLine;</p>
                 <div class="btn-box">
                     <a href="#">Hire Me</a>
                     <a href="#">Let's Talk</a>
