--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <title>Roman Raguso</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
+        <link rel="icon" href="imgs/michael.png">
     </head>
 
     <body>
@@ -31,7 +32,7 @@
                     <a href="#">Let's Talk</a>
                 </div>
             </div>
-            <img src="me.png" alt="My headshot">
+            <img src="imgs/me.png" alt="My headshot">
             <div class="home-sci">
                 <a href="#"><i class="bx bxl-facebook"></i></a>
                 <a href="#"><i class="bx bxl-twitter"></i></a>
